objects/EFPIO__OrchestrationEventSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Provides ability to override concrete classes with custom implementations</description>
    <fields>
        <fullName>EFPIO__CacheRepository_v1__c</fullName>
        <description>The fully qualified name of the cache repository to use during dependency injection which implements the globally visible ICacheRepository_v1 (Can have a custom implementation).</description>
        <label>Injectable Cache Repository v1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFPIO__CacheTTL__c</fullName>
        <description>The cache TTL in seconds (Minimum 300, Maximum 172,800).</description>
        <label>Cache time-to-live</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EFPIO__DataEncryptionProvider_v1__c</fullName>
        <description>The fully qualified class name of the data encryption provider to use.</description>
        <label>Data Encryption Provider Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFPIO__EncryptStateData__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines if the state data is encrypted or stored in plain text. Encryption is recommended.</description>
        <label>Encrypt State Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EFPIO__EventLogMaxRetryAttempts__c</fullName>
        <description>The maximum amount of times to attempt to retry a DML interaction before erroring.</description>
        <label>Event Log Max Retry Attempts</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EFPIO__EventRepository_v1__c</fullName>
        <description>DEPRECATED The fully qualified name of the event repository to use during dependency injection which implements the globally visible IEventRepository_v1 (Can have a custom implementation).</description>
        <label>-D Injectable Event Repository v1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFPIO__EventRepository_v2__c</fullName>
        <description>The fully qualified name of the event repository to use during dependency injection which implements the globally visible IEventRepository_v2 (Can have a custom implementation).</description>
        <label>Injectable Event Repository v2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFPIO__PlatformCachePartitionName__c</fullName>
        <description>If the concrete class for ICacheRepository_v1 in use is leveraging Platform Cache, enter the partition name here to use.</description>
        <label>Platform Cache Partition Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFPIO__PlatformEventDefinitionNs__c</fullName>
        <description>If the concrete class for IEventRepository_v1 in use is leveraging Platform Events, enter the platform event definition namespace here to use (Can be a standard or high volume org partition.).</description>
        <label>Platform Event Object Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFPIO__PlatformEventDefinition__c</fullName>
        <description>If the concrete class for IEventRepository_v1 in use is leveraging Platform Events, enter the platform event definition name here to use (Can be a standard or high volume org partition.).</description>
        <label>Platform Event Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EFPIO - Orchestration Event Settings</label>
</CustomObject>